Fixing project card content overflowing out of outer container

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -88,11 +88,11 @@ img {
 }
 
 .project-card {
-    overflow: hidden;
     flex-basis: 30%;
     background-color: #fff;
     border: 1px solid #333;
     border-radius: 10px;
+    min-height: 450px;
     &__footer {
         display: flex;
         justify-content: space-between;
@@ -106,15 +106,29 @@ img {
         text-align: center;
         font-size: 1.25rem;
     }
-
+    &__image {
+        width: 100%;
+        height: 50%;
+        background: no-repeat top;
+    background-size: cover;
+    border-radius: 10px 10px 0 0;
+    }
     &__body {
         padding: 0 0.5rem;
         margin: 0 0 0.75rem 0;
     }
 
     &__footer {
+    
         padding: 0.5rem;
     }
+}
+.project-1 {
+    background-image: url('../images/project01.JPG');
+}
+
+.project-2 {
+    background-image: url('../images/project02.JPG');
 }
 
 .project {
